--- a/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
+++ b/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
@@ -26,17 +26,17 @@
 
     <ul class="nav nav-tabs" role="tablist">
       <li class="nav-item">
-        <a href="#billing" class="nav-link rounded-pill active" data-bs-toggle="tab" role="tab">
+        <a href="#billing" class="nav-link active" data-bs-toggle="tab" role="tab">
           Facture
         </a>
       </li>
       <li class="nav-item">
-        <a href="#digital" class="nav-link rounded-pill" data-bs-toggle="tab" role="tab">
+        <a href="#digital" class="nav-link" data-bs-toggle="tab" role="tab">
           Documents numériques
         </a>
       </li>
       <li class="nav-item">
-        <a href="#paper" class="nav-link rounded-pill" data-bs-toggle="tab" role="tab">
+        <a href="#paper" class="nav-link" data-bs-toggle="tab" role="tab">
           Documents papiers
         </a>
       </li>
