--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20290,7 +20290,8 @@ h1.secondary-heading,
 }
 
 .card-carousel {
-  max-height: 70vh;
+  max-height: 450px;
+  min-height: 450px;
   max-width: 50vw;
   background-color: var(--ar-blue-dark-bg);
 }
@@ -20301,4 +20302,10 @@ h1.secondary-heading,
 
 .custom-input-group {
   background-color: white;
+}
+
+.card-img-top {
+  min-height: 20vh;
+  background-size: cover;
+  background-position: center;
 }
