--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -182,4 +182,6 @@
   <newsletter></newsletter>
 </div>
 
-<our-clients></our-clients>
+<div class="pb-5 mb-5">
+  <our-clients></our-clients>
+</div>
