--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.css
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.css
@@ -1,3 +1,8 @@
 .footer {
-    background-color: var(--ar-secondary-bg);
+    background-color: #14202E;
+}
+
+.footers-footer {
+    cursor: pointer;
+    color: #FFFFFF80;
 }
