--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer [ngClass]="{ 'footer': !isInNavbar }">
+<footer [ngClass]="{ 'footer': !isInNavbar }" class="pt-4">
   <div class="container">
 
     <!-- First column for liens utiles & localisation -->
@@ -53,6 +53,12 @@
               <a class="nav-link" style="cursor: pointer;" (click)="$event">Démo</a>
             </p>
             <p>
+              <a class="nav-link" style="cursor: pointer;" (click)="$event">Tarifs</a>
+            </p>
+            <p>
+              <a class="nav-link" style="cursor: pointer;" (click)="$event">Newsletter</a>
+            </p>
+            <p>
               <a class="nav-link" style="cursor: pointer;" (click)="$event">Contact</a>
             </p>
             <hr>
@@ -83,25 +89,23 @@
       </div>
     </div>
 
-    <hr>
-
     <!-- Footer with logo, social media and payments -->
-    <div *ngIf="!isInNavbar" class="mb-5 pb-4">
+    <div *ngIf="!isInNavbar" class="mb-4 pt-5">
       <div class="row d-flex justify-content-between align-items-center mx-2">
         <div class="col d-flex align-items-center justify-content-start">
           <a href="" class="me-4 d-none d-sm-block">
             <img [src]="logoJss" />
           </a>
           <div class="col d-flex align-items-center me-2">
-            <a class="btn btn-icon btn-sm btn-outline-primary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3"
+            <a class="btn btn-icon btn-sm btn-secondary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3"
               (click)="openLinkedin()" aria-label="LinkedIn">
               <i class="ai-linkedin"></i>
             </a>
-            <a class="btn btn-icon btn-sm btn-outline-primary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
+            <a class="btn btn-icon btn-sm btn-secondary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
               (click)="openFacebook()" aria-label="Facebook">
               <i class="ai-facebook"></i>
             </a>
-            <a class="btn btn-icon btn-sm btn-outline-primary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
+            <a class="btn btn-icon btn-sm btn-secondary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
               (click)="openInstagram()" aria-label="Instagram">
               <i class="ai-instagram"></i>
             </a>
@@ -110,6 +114,26 @@
         <div class="col-2 d-none d-sm-block">
           <img [src]="paymentMethods" alt="Payment Methods" />
         </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-8">
+          <div class="row">
+            <p class="col-auto fs-sm mb-1 footers-footer">Politique de protection des données
+              personnelles</p>
+            <p class="col-auto fs-sm mb-1 footers-footer">Mentions légales</p>
+            <p class="col-auto fs-sm mb-1 footers-footer">CGU</p>
+            <p class="col-auto fs-sm mb-1 footers-footer">Politique d'utilisation des Cookies</p>
+          </div>
+        </div>
+        <div class="col-4">
+          <p class="col-auto fs-sm mb-1 footers-footer" style="cursor: auto;">© 2025 Tous droits réservés <a
+              style="text-decoration: none;" href="#">Journal Spécial des
+              Sociétés</a></p>
+        </div>
+      </div>
+      <div class="row">
+        <p class="col-auto fs-sm footers-footer">Modifier mes choix de cookies</p>
       </div>
     </div>
   </div>
