--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -247,7 +247,7 @@
     <div class="row">
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_01.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Événements toute l’année</h4>
             <p class="card-text">La Com’ remue ciel et terre pour animer le quotidien des salariés : déjeuner,
@@ -257,7 +257,7 @@
       </div>
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_02.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Une équipe bienveillante</h4>
             <p class="card-text">Rejoignez une équipe accueillante et engagée où la bienveillance et la passion sont au
@@ -267,7 +267,7 @@
       </div>
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_03.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Fruits frais chaque semaine</h4>
             <p class="card-text">Chaque semaine, des corbeilles de fruits frais sont mises à disposition pour une touche
@@ -279,7 +279,7 @@
     <div class="row mb-4">
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_04.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Participation à tous les transports</h4>
             <p class="card-text">Nous prenons en charge une partie des transports en commun et versons également une
@@ -289,7 +289,7 @@
       </div>
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_05.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Bureaux au cœur de Paris</h4>
             <p class="card-text">Nos bureaux haussmanniens situés en plein cœur de Paris dans le quartier d’Opéra
@@ -299,7 +299,7 @@
       </div>
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_06.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Charte de télétravail</h4>
             <p class="card-text">Profitez d’un rythme de travail souple avec 1 jour de télétravail par semaine et 1 jour
@@ -311,7 +311,7 @@
     <div class="row mb-4">
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_07.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Carte ticket restaurant </h4>
             <p class="card-text">Nous prenons soin de votre pause déjeuner avec une carte tickets restaurant Edenred à
@@ -321,7 +321,7 @@
       </div>
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/fullfilling-workplace/image_08.png" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Mutuelle de qualité</h4>
             <p class="card-text">Bénéficiez d’une mutuelle avantageuse, prise en charge en partie par le JSS pour un
