fix breadcrumb + placeholder on practical-sheets

--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -6,10 +6,9 @@
     <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
       <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
       <li class="breadcrumb-item"><a routerLink="/tools">Outils</a></li>
-      <li class="breadcrumb-item"><a routerLink="/tools/practical_sheets">Nos fiches pratiques</a>
+      <li class="breadcrumb-item"><a routerLink="/tools/practical-sheets">Nos fiches pratiques</a>
       </li>
-      <li class="breadcrumb-item"><a routerLink="/tools/practical_sheets/slug"><span *ngIf="post">{{ post.slug
-            }}</span></a>
+      <li class="breadcrumb-item"><a><span *ngIf="post">{{ post.titleText }}</span></a>
       </li>
     </ol>
   </nav>
