--- a/client-myjss/src/app/modules/miscellaneous/components/generic-swiper/generic-swiper.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/generic-swiper/generic-swiper.component.css
@@ -1,6 +1,13 @@
 .card-img {
-  min-height: 450px;
-  max-height: 450px;
   background-size: cover;
   width: 100%;
+}
+
+.card-wrapper {
+  height: 500px;
+}
+
+.first-img {
+  object-fit: cover;
+
 }
