--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -40,16 +40,18 @@
       [firstItemImage]="'assets/img/announcement/carousel_announcement_init.jpg'"
       title="Les annonces légales les plus courantes">
       <ng-template let-post>
-        <div class="card card-carousel">
-          <div class="card-body">
-            <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-            <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-          </div>
-          <div class="card-footer ">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openPost(post.slug,$event)"
-              aria-label="Learn more">
-              <i class="ai-arrow-right"></i>
-            </a>
+        <div class="card-wrapper">
+          <div class="card card-carousel">
+            <div class="card-body">
+              <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+              <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </div>
+            <div class="card-footer ">
+              <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openPost(post.slug,$event)"
+                aria-label="Learn more">
+                <i class="ai-arrow-right"></i>
+              </a>
+            </div>
           </div>
         </div>
       </ng-template>
@@ -323,30 +325,31 @@
   </div>
 </section>
 
-
 <section class="background-opacity">
   <div class="container overflow-hidden">
     <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
       <ng-template let-post>
-        <div class="card card-carousel">
-          <div
-            [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-            class="card-img-top">
-          </div>
-          <div class="card-body">
-            <div class="mb-2">
-              <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
-              <span class="fs-xs opacity-20 mx-3">|</span>
-              <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+        <div class="card-wrapper">
+          <div class="card card-carousel d-flex flex-column">
+            <div
+              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
+              class="card-img-top">
             </div>
-            <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
-              <h4 class="card-title">{{post.titleText}}</h4>
-              <p class="card-text text-gray text-truncate-custom" [innerHTML]="post.excerptText | trustHtml"></p>
-            </a>
-            <hr>
-            <div class="d-flex">
-              <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-              <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+            <div class="card-body d-flex flex-column">
+              <div class="mb-2">
+                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-xs opacity-20 mx-3">|</span>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+              </div>
+              <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
+                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+              </a>
+              <hr>
+              <div class="card-footer p-0 m-0 d-flex">
+                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
+                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              </div>
             </div>
           </div>
         </div>
