--- a/client-myjss/src/app/modules/my-services/formality/formality.component.css
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.css
@@ -15,3 +15,23 @@
   text-overflow: ellipsis;
   white-space: normal;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card-body {
+  flex-grow: 1;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-wrapper {
+  height: 500px;
+}
