--- a/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div
-      [ngClass]="thirdStepTitle &&  thirdJumpTo>0 ? 'col-sm-6 col-lg-6 order-lg-3' : 'col-sm-12 col-lg-12 order-lg-3'">
+      [ngClass]="thirdStepTitle && thirdStepDescription ? 'col-sm-6 col-lg-6 order-lg-3' : 'col-sm-12 col-lg-12 order-lg-3'">
       <a class=" card border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(secondJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body">
@@ -46,7 +46,7 @@
         </div>
       </a>
     </div>
-    <div *ngIf="thirdStepTitle && thirdStepDescription && thirdJumpTo>0" class="col-sm-6 col-lg-6 order-lg-4">
+    <div *ngIf="thirdStepTitle && thirdStepDescription " class="col-sm-6 col-lg-6 order-lg-4">
       <a class="card border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(thirdJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body">
