--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -9,7 +9,7 @@
         <p class="text-body fs-xl mb-5 text-white">Publiez vos annonces légales en ligne sur myjss.fr partout en France
           grâce à notre réseau. Profitez de l'assistance de nos experts par téléphone et par mail. </p>
         <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
-          quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale">
+          quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale" [isLightButtons]="true">
         </double-buttons>
       </div>
     </div>
@@ -43,8 +43,8 @@
             <span class="fs-xs fw-semibold text-blue text-uppercase">Annonce légale</span>
           </div>
           <h2 class="h1 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
-            linkLabel="Consulter une annonce légale">
+          <double-buttons orderActionLabel=" Publier une annonce légale" quotationActionLabel="Demander un devis"
+            linkLabel="Consulter une annonce légale" [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
