--- a/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
@@ -9,7 +9,7 @@
         <p class="text-body fs-xl mb-5 text-white">Confiez à nos experts vos documents à authentifier pour une démarche
           à l'étranger ou en France d’entreprise étrangère.</p>
         <double-buttons orderActionLabel="Demander une apostille ou légalisation"
-          quotationActionLabel="Demander un devis" linkLabel="Lien vers l'outil">
+          quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur">
         </double-buttons>
       </div>
     </div>
@@ -47,7 +47,7 @@
           </div>
           <h2 class="h1 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons orderActionLabel="Demander une apostille ou légalisation"
-            quotationActionLabel="Demander un devis" linkLabel="Lien vers l'outil">
+            quotationActionLabel="Demander un devis" linkLabel="Lien vers l'outil" [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
