--- a/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
@@ -45,7 +45,7 @@
           </div>
           <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons orderActionLabel="Domicilier mon entreprise" quotationActionLabel="Demander un devis"
-            linkLabel="Lien vers la page métier">
+            linkLabel="Lien vers la page métier" [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
