--- a/client-myjss/src/app/modules/my-services/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/document/document.component.html
@@ -43,8 +43,8 @@
             <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase">Documents</span>
           </div>
           <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Récupérer mes documents juridiques"
-            quotationActionLabel="Demander un devis">
+          <double-buttons orderActionLabel="Récupérer mes documents juridiques" quotationActionLabel="Demander un devis"
+            [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
