--- a/client-myjss/src/app/modules/my-services/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.html
@@ -43,7 +43,8 @@
             <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase"> Formalités légales</span>
           </div>
           <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Déposer ma formalité" quotationActionLabel="Demander un devis">
+          <double-buttons orderActionLabel="Déposer ma formalité" quotationActionLabel="Demander un devis"
+            [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
