--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -84,25 +84,27 @@
 
     <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
       <ng-template let-post>
-        <div class="card card-carousel">
-          <div
-            [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-            class="card-img-top">
-          </div>
-          <div class="card-body">
-            <div class="mb-2">
-              <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
-              <span class="fs-xs opacity-20 mx-3">|</span>
-              <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+        <div class="card-wrapper">
+          <div class="card card-carousel">
+            <div
+              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
+              class="card-img-top">
             </div>
-            <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
-              <h4 class="card-title">{{post.titleText}}</h4>
-              <p class="card-text text-gray text-truncate-custom" [innerHTML]="post.excerptText | trustHtml"></p>
-            </a>
-            <hr>
-            <div class="d-flex">
-              <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-              <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+            <div class="card-body">
+              <div class="mb-2">
+                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-xs opacity-20 mx-3">|</span>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+              </div>
+              <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
+                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+              </a>
+              <hr>
+              <div class="d-flex">
+                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
+                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              </div>
             </div>
           </div>
         </div>
@@ -138,25 +140,27 @@
 
   <generic-swiper *ngIf="topPosts && topPosts.length>0" [items]="topPosts" title="Nos derniers articles">
     <ng-template let-post>
-      <div class="card card-carousel">
-        <div
-          [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-          class="card-img-top" alt="Card image">
-        </div>
-        <div class="card-body">
-          <div class="mb-2">
-            <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
-            <span class="fs-xs opacity-20 mx-3">|</span>
-            <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+      <div class="card-wrapper">
+        <div class="card card-carousel">
+          <div
+            [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
+            class="card-img-top" alt="Card image">
           </div>
-          <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
-            <h4 class="card-title">{{post.titleText}}</h4>
-            <p class="card-text text-gray text-truncate-custom" [innerHTML]="post.excerptText | trustHtml"></p>
-          </a>
-          <hr>
-          <div class="d-flex">
-            <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-            <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+          <div class="card-body">
+            <div class="mb-2">
+              <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+              <span class="fs-xs opacity-20 mx-3">|</span>
+              <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+            </div>
+            <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
+              <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+              <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </a>
+            <hr>
+            <div class="d-flex">
+              <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
+              <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+            </div>
           </div>
         </div>
       </div>
@@ -193,25 +197,27 @@
     <generic-swiper *ngIf="mostSeenPosts && mostSeenPosts.length>0" [items]="mostSeenPosts"
       title="Articles les plus vus">
       <ng-template let-post>
-        <div class="card card-carousel">
-          <div
-            [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-            class="card-img-top" alt="Card image">
-          </div>
-          <div class="card-body">
-            <div class="mb-2">
-              <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
-              <span class="fs-xs opacity-20 mx-3">|</span>
-              <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+        <div class="card-wrapper">
+          <div class="card card-carousel">
+            <div
+              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
+              class="card-img-top" alt="Card image">
             </div>
-            <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
-              <h4 class="card-title">{{post.titleText}}</h4>
-              <p class="card-text text-gray text-truncate-custom" [innerHTML]="post.excerptText | trustHtml"></p>
-            </a>
-            <hr>
-            <div class="d-flex">
-              <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-              <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+            <div class="card-body">
+              <div class="mb-2">
+                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-xs opacity-20 mx-3">|</span>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]" href="#">{{post.postTags[0].name}}</a>
+              </div>
+              <a class="text-decoration-none" href="#" (click)="openPost(post.slug,$event)">
+                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+              </a>
+              <hr>
+              <div class="d-flex">
+                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
+                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              </div>
             </div>
           </div>
         </div>
