--- a/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
+++ b/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
   <a class="text-nav btn btn-icon bg-light border rounded-circle position-absolute top-0 end-0 p-0 mt-3 me-3 mt-sm-4 me-sm-4"
     href="" data-bs-toggle="tooltip" data-bs-placement="left" title="Revenir à l'accueil"
     aria-label="Revenir à l'accueil">
-    <i class="ai-home"></i>
+    <i class="ai-home home-icon"></i>
   </a>
 
   <!-- Sign in form -->
